RESOLVED FIXED141792
Refine the FTL part of ArithPow
https://bugs.webkit.org/show_bug.cgi?id=141792
Summary Refine the FTL part of ArithPow
Benjamin Poulain
Reported 2015-02-18 22:00:44 PST
Refine the FTL part of ArithPow
Attachments
Patch (20.75 KB, patch)
2015-02-18 22:20 PST, Benjamin Poulain
fpizlo: review+
Benjamin Poulain
Comment 1 2015-02-18 22:20:43 PST
Benjamin Poulain
Comment 2 2015-02-18 23:37:51 PST
Comment on attachment 246880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=246880&action=review > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:177 > + throw "Error: exponentIsInfinityConstant(2) should be Infinity, was = " + result; Note to self: fix the error messages before landing. > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:182 > + throw "Error: exponentIsInfinityConstant(5) should be Infinity+29, was = " + result; Ditto > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:187 > + throw "Error: exponentIsInfinityConstant(2.1) should be Infinity, was = " + result; Ditto > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:202 > + throw "Error: exponentIsNegativeInfinityConstant(2) should be Infinity, was = " + result; Ditto > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:207 > + throw "Error: exponentIsNegativeInfinityConstant(5) should be Infinity+29, was = " + result; Ditto > Source/JavaScriptCore/tests/stress/math-pow-with-constants.js:212 > + throw "Error: exponentIsNegativeInfinityConstant(2.1) should be Infinity, was = " + result; Ditto
Benjamin Poulain
Comment 3 2015-02-19 13:08:32 PST
Note You need to log in before you can comment on or make changes to this bug.